# PrismX

./: .env.example  .gitignore  README.md  README.zh-CN.md  mcp_servers.json  pyproject.toml  run.sh  run_web.sh  transformer_tree.md  技术报告书v1.md
docs/: API_REFERENCE.md  CAPABILITY_PARITY.md  IMPLEMENTATION_ARCHITECTURE.md  NON_CODING_LONG_TASK_TEST_CASE.md  TGM2.0.md  TGM3.0.md  TGM_FRONTEND_TEST_PLAN.md  TGM_IMPLEMENTATION_REPORT.md  source_code_guide.md  test-path.md  tree-session-implementation.zh.md
frontend/: app.js  index.html  snapshot.txt  styles.css
frontend/docs/: ui-spec.md
ppt/: index.html
sessions/: default.jsonl  test00.jsonl
skills/summarize/: SKILL.md
src/my_agent2/: cli.py  compactor.py  context.py  contextfs.py  loop.py  memory.py  model_client.py  runner.py  server.py  session_memory_committer.py  skills.py  team.py  tree_session.py  web_adapter.py
src/prismax/: cli.py  context.py  knowledge.py  loop.py  mcp_bridge.py  memory.py  runtime_recall.py  server.py  session_memory_committer.py  tree_memory.py  tree_session.py
src/prismx/: __init__.py  cli.py  knowledge.py  knowledge_compiler.py  loop.py  memory.py  runtime_paths.py  runtime_recall.py  server.py  session_memory_committer.py  team.py  tree_memory.py  tree_session.py  web_adapter.py  working_set.py  workspace.py
templates/: USER.md  system.md
templates/subagents/: analyst.md  (+3 more)
tests/: test_agent_tree_integration.py  test_agent_tree_memory_commit.py  test_agentapp_runtime_context.py  test_cli_commands.py  test_cli_memory_context.py  test_context_tools.py  test_contextfs.py  test_memory_graph.py  test_memory_os.py  test_prismax_tgm.py  test_real_scenarios.py  test_runtime_context.py  test_server_workspace_context.py  test_session_memory_committer.py  test_tgm3_memory.py  test_tgm_refactor.py  test_tree_session.py  test_workspace.py
(+21 files in other folders)
