[project]
name = "prismx"
version = "0.1.0"
description = "一个支持工具、技能、任务列表、记忆和子代理的通用型本地 Agent。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
prismx = "prismx.cli:main"
prismx-web = "prismx.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prismx"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
